make all tests run with jupiter, make project java 1.8 based on work from davidegironi, drop spring-security dependency for now #6 #18 #19